--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Shariful Shohag | Personal Website</title>
+  <title>Shariful Islam Shohag | Personal Website</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -73,21 +73,21 @@
 </head>
 <body>
   <header>
-    <h1>Shariful Shohag</h1>
-    <p>Developer | Learner | Creator</p>
+    <h1>Shariful Islam Shohag</h1>
+    <p>Researcher | Learner </p>
   </header>
   <main>
     <section class="section">
       <h2>About Me</h2>
-      <p>Hello! I’m Shariful Shohag, a passionate developer who loves building creative solutions for the web. Welcome to my personal space on GitHub Pages!</p>
+      <p>Hello! I’m Shariful Shohag, Graduate from North South University with a highest academic distintion 'Summa Cum Laude'. I am Passionate in research and creating new knowledge for social wellbeing. Welcome to my personal space on GitHub Pages!</p>
     </section>
     <section class="section">
       <h2>Skills</h2>
       <ul>
-        <li>HTML, CSS, JavaScript</li>
+        <li>MATLAB, C, Python</li>
        
-        <li>Python, Django</li>
-        <li>Git & GitHub</li>
+        <li>LTSpice, Logisim, Multisim, Cadence</li>
+        <li>OriginLab, Comsol </li>
         <li>Responsive Web Design</li>
       </ul>
     </section>
@@ -109,7 +109,7 @@
     </section>
   </main>
   <footer>
-    &copy; 2025 Shariful Shohag. Powered by <a href="https://pages.github.com/" target="_blank" style="color:#3182ce;">GitHub Pages</a>.
+    &copy; 2025 Shariful Islam Shohag. Powered by <a href="https://pages.github.com/" target="_blank" style="color:#3182ce;">GitHub Pages</a>.
   </footer>
 </body>
 </html>
