--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
   <main>
     <section class="section">
       <h2>About Me</h2>
-      <p>Hello! I’m Shariful Shohag, Graduate from North South University with a highest academic distintion 'Summa Cum Laude'. I am Passionate in research and creating new knowledge for social wellbeing. Welcome to my personal space on GitHub Pages!</p>
+      <p> Hello, I am Shariful Islam Shohag recently graduated from North South University (NSU) in Dhaka, Bangladesh, with a BSc in Electrical and Electronics Engineering (EEE), earning Summa Cum Laude honors and a 3.81/4.00 GPA, ranking in the top 5 in class. My academic excellence spans circuit theory, electronics, power systems, signal processing, and electromagnetics.
+
+I excels in circuit simulation using tools like LTSpice,Multisim, MATLAB/Simulink, and PSpice, and applies mathematical modeling with linear algebra, differential equations, and optimization to address challenges in signal integrity, control systems, and renewable energy integration. My hands-on projects have optimized electronic circuits for enhanced performance.
+
+As a Research Assistant at NSU, I contribute to data analysis, simulation experiments, literature reviews, and writing paper, focusing on technologies for social good, such as efficient energy systems, smart grids, and VLSI circuits. I am eager to explore AI in engineering, renewable energy, and IoT-integrated circuits, showcasing adaptability and a passion for learning.
+
+I am actively seeking funded master’s or PhD opportunities in electrical engineering or related fields, aiming to drive impactful research. With strong academic record and technical expertise, I am poised to become a leader in engineering innovation.</p>
     </section>
     <section class="section">
       <h2>Skills</h2>
@@ -88,7 +94,7 @@
        
         <li>LTSpice, Logisim, Multisim, Cadence</li>
         <li>OriginLab, Comsol </li>
-        <li>Responsive Web Design</li>
+        <li>Reopt, HOMER Pro</li>
       </ul>
     </section>
     <section class="section">
@@ -104,7 +110,7 @@
       <div class="social-links">
         <a href="mailto:shariful.shohag60@gmail.com">Email</a>
         <a href="https://github.com/shariful-shohag60" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/shariful-shohag60" target="_blank">LinkedIn</a>
+        <a href="www.linkedin.com/in/mdsharifulislam1" target="_blank">LinkedIn</a>
       </div>
     </section>
   </main>
