--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
   <header>
     <h1>Shariful Islam Shohag</h1>
-    <p>Researcher | Learner </p>
+    <p>Research Assistant| North South University </p>
   </header>
   <main>
     <section class="section">
