--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ I am actively seeking funded master’s or PhD opportunities in electrical engin
       <div class="social-links">
         <a href="mailto:shariful.shohag60@gmail.com">Email</a>
         <a href="https://github.com/shariful-shohag60" target="_blank">GitHub</a>
-        <a href="www.linkedin.com/in/mdsharifulislam1" target="_blank">LinkedIn</a>
+        <a href="https://linkedin.com/in/mdsharifulislam1" target="_blank">LinkedIn</a>
       </div>
     </section>
   </main>
